--- a/block-BHaabh/assets/stylesheet/style.css
+++ b/block-BHaabh/assets/stylesheet/style.css
@@ -156,8 +156,8 @@ h2{
     padding: 2%;
 }
 .circle{
-    width: 11rem;
-    height: 11rem;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     margin-bottom: 1rem;
 }
